# meta-mcp

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  CLAUDE.md  COMPLETION_SUMMARY.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  docker-compose.yml  install.sh  meta-server.yaml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  publish.yml
config/: apple-container-qdrant.yaml  auto-detect.yaml  meta-server-apple.yaml  meta-server-minimal.yaml  meta-server-npx.yaml  meta-server.yaml  simple-config.yaml
docs/: IMPLEMENTATION_PLAN.md  apple-container-setup.md
docs/tools/: filesystem.md  github.md
embedding-models/: embeddings_cache.pkl
examples/: advanced-config.yaml  simple-config.yaml
examples/child-servers/: README.md
scripts/: check-all.sh  detect-container-runtime.sh  get-qdrant-ip.sh  meta-mcp-wrapper  qdrant-apple-container.sh  run-qdrant-apple-container.sh  setup-apple-container.sh  start-meta-mcp.sh
src/meta_mcp/: health.py  main.py  server_wrapper.py
src/meta_mcp/child_servers/: client.py  manager.py
src/meta_mcp/config/: dynamic.py  loader.py  models.py
src/meta_mcp/embeddings/: service.py
src/meta_mcp/health/: __init__.py  checker.py  dependency_checker.py  docker_manager.py  setup_manager.py
src/meta_mcp/llm/: lm_studio_client.py
src/meta_mcp/rag/: pipeline.py
src/meta_mcp/routing/: base.py  llm_router.py  rag_router.py  vector_router.py
src/meta_mcp/server/: meta_server.py
src/meta_mcp/utils/: logging.py
src/meta_mcp/vector_store/: qdrant_client.py
src/meta_mcp/web_ui/: app.py  gradio_app.py
tests/: conftest.py  test_child_manager.py  test_config.py  test_embedding_service.py  test_health_command.py  test_integration.py  test_routing_strategies.py  test_web_api.py
