[project]
name = "mcp-router"
version = "0.1.1"
description = "Intelligent MCP (Model Context Protocol) router with automatic tool selection"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Anirudh Lath", email = "anirudhlath@gmail.com"}
]
keywords = ["mcp", "model-context-protocol", "ai", "llm", "routing", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "websockets>=12.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.1",
    "httpx>=0.25.0",
    "sentence-transformers>=2.2.2",
    "qdrant-client>=1.7.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "numpy>=1.24.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "psutil>=5.9.0",
    "gradio>=5.34.0",
    "docker>=7.0.0",
    "packaging>=23.0",
]

[project.urls]
Homepage = "https://github.com/anirudhlath/meta-mcp"
Repository = "https://github.com/anirudhlath/meta-mcp"
Documentation = "https://github.com/anirudhlath/meta-mcp#readme"
Issues = "https://github.com/anirudhlath/meta-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.8",
    "mypy>=1.7.0",
]
web = [
    "jinja2>=3.1.0",
    "aiofiles>=23.2.0",
]

[project.scripts]
mcp-router = "meta_mcp.main:main_uvx"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meta_mcp"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.8",
    "mypy>=1.7.0",
    "pre-commit>=4.2.0",
    "types-pyyaml>=6.0.12.20250516",
]

# Ruff configuration for linting AND formatting
[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.isort]
known-first-party = ["meta_mcp"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
